ID : 102 Issue: User registration and activate user account through mail. Fixed: User registration and able to get mail. Testing: Tested using insomnia.

--- a/Server/.env
+++ b/Server/.env
@@ -11,3 +11,15 @@ CLOUD_NAME = dxvvbzdze
 CLOUD_API_KEY = 454994169112129
 
 CLOUD_SCERET_KEY = GrEPAf_FFlSdK3pYx91wepODJ20
+
+ACTIVATION_SECRET = 123456789
+
+SMTP_HOST = smtp.gmail.com
+
+SMTP_PORT = 465
+
+SMTP_SERVICE = gmail
+
+SMTP_MAIL = compsciuniv@gmail.com
+
+SMTP_PASSWORD = tgae hbth dhhp wnpn
