loginUser and LogoutUser completed

--- a/Server/.env
+++ b/Server/.env
@@ -4,7 +4,7 @@ ORIGIN = ["http://localhost:3000"]
 
 DBURL = "mongodb+srv://freshkite:freshkite@cluster0.cjtnere.mongodb.net/LMS"
 
-REDIS = "rediss-cli --tls -u redis://default:58874cb907004eb997a73c88aec0865b@glorious-skylark-46801.upstash.io:46801"
+REDIS = "rediss://default:ce4c68d84298481ab96d175b25a58c37@emerging-buzzard-31648.upstash.io:31648"
 
 CLOUD_NAME = dxvvbzdze
 
@@ -13,6 +13,14 @@ CLOUD_API_KEY = 454994169112129
 CLOUD_SCERET_KEY = GrEPAf_FFlSdK3pYx91wepODJ20
 
 ACTIVATION_SECRET = 123456789
+
+ACCESS_TOKEN = 'kn~3P>7WF?4!U~1D.lJG8XKVv35Jj:XiT*B?X^5!+-1g)Sev:t'
+
+REFRESH_TOKEN = 'nn3p~:26KFJjBMFeGkZV@Hv\tml{)/(FHAtD\o{BUS\E,£6_+e'
+
+ACCESS_TOKEN_EXPIRE = 5
+
+REFRESH_TOKEN_EXPIRE = 59
 
 SMTP_HOST = smtp.gmail.com
 
