Implemented Get single and all courses -- without purchasing Api's

--- a/Server/.env
+++ b/Server/.env
@@ -4,7 +4,7 @@ ORIGIN = ["http://localhost:3000"]
 
 DBURL = "mongodb+srv://freshkite:freshkite@cluster0.cjtnere.mongodb.net/LMS"
 
-REDIS = "rediss-cli --tls -u redis://default:58874cb907004eb997a73c88aec0865b@glorious-skylark-46801.upstash.io:46801"
+REDIS = "rediss://default:ce4c68d84298481ab96d175b25a58c37@emerging-buzzard-31648.upstash.io:31648"
 
 CLOUD_NAME = dxvvbzdze
 
